--- a/CombineUIKit/CustomTextField/CustomTextField.xib
+++ b/CombineUIKit/CustomTextField/CustomTextField.xib
@@ -3,14 +3,16 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomTextField" customModule="UINaviVC" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomTextField" customModule="CombineUIKit" customModuleProvider="target">
             <connections>
                 <outlet property="labelCustom" destination="Ojx-Nu-f7d" id="XPB-fJ-uoq"/>
                 <outlet property="textFieldCustom" destination="Kxq-Se-UGV" id="qPH-e1-ICS"/>
+                <outlet property="textFieldViewCustom" destination="RV9-Jv-8pg" id="jXk-RT-pAf"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -22,20 +24,35 @@
                     <rect key="frame" x="0.0" y="0.0" width="324" height="118"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ojx-Nu-f7d">
-                            <rect key="frame" x="0.0" y="0.0" width="324" height="20.333333333333332"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <rect key="frame" x="0.0" y="0.0" width="324" height="54"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                            <color key="textColor" name="Neutral5"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kxq-Se-UGV">
-                            <rect key="frame" x="0.0" y="32.333333333333336" width="324" height="85.666666666666657"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RV9-Jv-8pg">
+                            <rect key="frame" x="0.0" y="66" width="324" height="52"/>
+                            <subviews>
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Kxq-Se-UGV">
+                                    <rect key="frame" x="12" y="0.0" width="312" height="52"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="52" id="nAq-IC-D2t"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="Kxq-Se-UGV" secondAttribute="bottom" id="K4u-fk-QIH"/>
+                                <constraint firstItem="Kxq-Se-UGV" firstAttribute="top" secondItem="RV9-Jv-8pg" secondAttribute="top" id="QFH-w7-ggE"/>
+                                <constraint firstAttribute="trailing" secondItem="Kxq-Se-UGV" secondAttribute="trailing" id="T1l-4g-saw"/>
+                                <constraint firstItem="Kxq-Se-UGV" firstAttribute="leading" secondItem="RV9-Jv-8pg" secondAttribute="leading" constant="12" id="pXr-EM-qvN"/>
+                            </constraints>
+                        </view>
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="Background"/>
             <constraints>
                 <constraint firstItem="yet-rp-fhn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="384-Sh-tRv"/>
                 <constraint firstAttribute="trailing" secondItem="yet-rp-fhn" secondAttribute="trailing" id="KT4-Fj-m8m"/>
@@ -47,6 +64,12 @@
         </view>
     </objects>
     <resources>
+        <namedColor name="Background">
+            <color red="0.96078431372549022" green="0.96078431372549022" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Neutral5">
+            <color red="0.34901960784313724" green="0.38039215686274508" blue="0.47843137254901963" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
