--- a/CombineUIKit/DeleteVC.xib
+++ b/CombineUIKit/DeleteVC.xib
@@ -5,13 +5,13 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DeleteVC" customModule="CombineUIKit" customModuleProvider="target">
             <connections>
                 <outlet property="deleteView" destination="sTe-Qi-Nmx" id="I7h-ST-LIG"/>
+                <outlet property="superView" destination="i5M-Pr-FkT" id="bPK-N9-J20"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -60,6 +60,7 @@
                                                 </backgroundConfiguration>
                                                 <directionalEdgeInsets key="contentInsets" top="0.0" leading="0.0" bottom="0.0" trailing="0.0"/>
                                                 <color key="baseForegroundColor" name="Primary1"/>
+                                                <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </buttonConfiguration>
                                             <connections>
                                                 <action selector="cancelButton:" destination="-1" eventType="touchUpInside" id="PKl-OT-oNf"/>
@@ -73,7 +74,9 @@
                                             </constraints>
                                             <color key="tintColor" name="Primary1"/>
                                             <state key="normal" title="Button"/>
-                                            <buttonConfiguration key="configuration" style="filled" title="Yes" cornerStyle="large"/>
+                                            <buttonConfiguration key="configuration" style="filled" title="Yes" cornerStyle="large">
+                                                <color key="baseBackgroundColor" red="1" green="0.38665097949999999" blue="0.40042614939999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </buttonConfiguration>
                                             <connections>
                                                 <action selector="yesButton:" destination="-1" eventType="touchUpInside" id="67l-xR-1h5"/>
                                             </connections>
@@ -89,7 +92,7 @@
                             </constraints>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="168" id="16t-s5-mX1"/>
                         <constraint firstItem="hJ9-f0-BVw" firstAttribute="leading" secondItem="sTe-Qi-Nmx" secondAttribute="leading" id="CWV-Oe-d34"/>
@@ -114,8 +117,5 @@
         <namedColor name="Primary1">
             <color red="1" green="0.38823529411764707" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
