--- a/CombineUIKit/ListView/ListCell/ListCell.xib
+++ b/CombineUIKit/ListView/ListCell/ListCell.xib
@@ -3,76 +3,90 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListCell" customModule="UINaviVC" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListCell" customModule="CombineUIKit" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="316" id="KGk-i7-Jjw" customClass="ListCell" customModule="UINaviVC" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="316" id="KGk-i7-Jjw" customClass="ListCell" customModule="CombineUIKit" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="637" height="316"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="637" height="316"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="G28-Wy-9ab">
-                        <rect key="frame" x="16" y="16" width="605" height="60"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZrC-Ze-Fxa">
+                        <rect key="frame" x="10" y="8" width="617" height="80"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="qG0-RW-TTH">
-                                <rect key="frame" x="0.0" y="0.66666666666666785" width="48" height="46.666666666666657"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="48" id="7Wu-OM-eRm"/>
-                                    <constraint firstAttribute="width" constant="48" id="lf4-s4-Fr8"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="oTH-3B-LjJ">
-                                <rect key="frame" x="60" y="0.0" width="509" height="60"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="G28-Wy-9ab">
+                                <rect key="frame" x="16" y="16" width="585" height="48"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bpI-V8-v89">
-                                        <rect key="frame" x="0.0" y="0.0" width="509" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oIr-Eu-dve">
-                                        <rect key="frame" x="0.0" y="30" width="509" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Ava" translatesAutoresizingMaskIntoConstraints="NO" id="qG0-RW-TTH">
+                                        <rect key="frame" x="0.0" y="0.0" width="48" height="48"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="7Wu-OM-eRm"/>
+                                            <constraint firstAttribute="width" constant="48" id="lf4-s4-Fr8"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="oTH-3B-LjJ">
+                                        <rect key="frame" x="60" y="0.0" width="489" height="48"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bpI-V8-v89">
+                                                <rect key="frame" x="0.0" y="0.0" width="489" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                                <color key="textColor" name="Neutral5"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oIr-Eu-dve">
+                                                <rect key="frame" x="0.0" y="24" width="489" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                                <color key="textColor" name="Neutral3"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cvg-pR-8PP">
+                                        <rect key="frame" x="561" y="24" width="24" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="24" id="0ZZ-rx-HDi"/>
+                                            <constraint firstAttribute="width" constant="24" id="ZWZ-fT-sSs"/>
+                                        </constraints>
+                                        <color key="tintColor" name="Neutral5"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="goto">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="toProfile:" destination="-1" eventType="touchUpInside" id="U6f-XX-i4a"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cvg-pR-8PP">
-                                <rect key="frame" x="581" y="24" width="24" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="24" id="0ZZ-rx-HDi"/>
-                                    <constraint firstAttribute="width" constant="24" id="ZWZ-fT-sSs"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="arrow.forward.circle" catalog="system">
-                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="toProfile:" destination="-1" eventType="touchUpInside" id="U6f-XX-i4a"/>
-                                </connections>
-                            </button>
                         </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="60" id="8Tt-rG-sOH"/>
-                            <constraint firstAttribute="bottom" secondItem="oTH-3B-LjJ" secondAttribute="bottom" id="yhX-qa-PHE"/>
+                            <constraint firstItem="G28-Wy-9ab" firstAttribute="top" secondItem="ZrC-Ze-Fxa" secondAttribute="top" constant="16" id="AOF-gZ-1Da"/>
+                            <constraint firstAttribute="trailing" secondItem="G28-Wy-9ab" secondAttribute="trailing" constant="16" id="IXv-X1-26y"/>
+                            <constraint firstAttribute="height" constant="80" id="T1L-rQ-yog"/>
+                            <constraint firstItem="G28-Wy-9ab" firstAttribute="leading" secondItem="ZrC-Ze-Fxa" secondAttribute="leading" constant="16" id="W5e-Us-qug"/>
+                            <constraint firstAttribute="bottom" secondItem="G28-Wy-9ab" secondAttribute="bottom" constant="16" id="eYX-wb-6wd"/>
                         </constraints>
-                    </stackView>
+                    </view>
                 </subviews>
+                <color key="backgroundColor" name="Background"/>
                 <constraints>
-                    <constraint firstItem="G28-Wy-9ab" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="1YF-aK-RFu"/>
-                    <constraint firstItem="G28-Wy-9ab" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Gb1-ap-KqW"/>
-                    <constraint firstItem="G28-Wy-9ab" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="g75-Yf-6rh"/>
-                    <constraint firstAttribute="trailing" secondItem="G28-Wy-9ab" secondAttribute="trailing" constant="16" id="kJK-AD-xjT"/>
+                    <constraint firstAttribute="trailing" secondItem="ZrC-Ze-Fxa" secondAttribute="trailing" constant="10" id="5Tf-UA-bIb"/>
+                    <constraint firstAttribute="bottom" secondItem="ZrC-Ze-Fxa" secondAttribute="bottom" constant="8" id="Spv-7U-06e"/>
+                    <constraint firstItem="ZrC-Ze-Fxa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="byR-vU-dcM"/>
+                    <constraint firstItem="ZrC-Ze-Fxa" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="gm2-it-hSq"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="BoundView" destination="ZrC-Ze-Fxa" id="U8F-qV-47f"/>
                 <outlet property="fullNameLabel" destination="bpI-V8-v89" id="w8Y-p8-9bH"/>
                 <outlet property="wAh" destination="oIr-Eu-dve" id="fcj-GJ-Y8Q"/>
             </connections>
@@ -80,7 +94,19 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="arrow.forward.circle" catalog="system" width="128" height="123"/>
-        <image name="person.circle.fill" catalog="system" width="128" height="123"/>
+        <image name="Ava" width="48" height="48"/>
+        <image name="goto" width="20" height="20"/>
+        <namedColor name="Background">
+            <color red="0.96078431372549022" green="0.96078431372549022" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Neutral3">
+            <color red="0.61176470588235299" green="0.61960784313725492" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Neutral5">
+            <color red="0.34901960784313724" green="0.38039215686274508" blue="0.47843137254901963" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
